--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,7 @@
 :root {
   --mainBrown: #3b1f1f;
   --mainYellow: #fcb419;
-  --mainGrey: #979797;
+  --mainGrey: #c7c7c7;
   --mainWhite: #ebebeb;
   --mainDark: rgb(22, 22, 22);
 }
