--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -22,3 +22,12 @@ body {
   background-position: center;
   background-size: cover;
 }
+.btn-yellow {
+  color: var(--mainYellow);
+  border-color: var(--mainYellow);
+}
+
+.btn-yellow:hover {
+  background: var(--mainYellow);
+  color: var(--mainBrown);
+}
