--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 :root {
   --mainBrown: #3b1f1f;
   --mainYellow: rgb(252, 180, 25);
