--- a/src/components/css/navbar.scss
+++ b/src/components/css/navbar.scss
@@ -3,6 +3,12 @@
   height: auto;
 }
 
+.navbar {
+  max-width: 980px;
+  width: 100%;
+  margin: 1em auto;
+}
+
 .navbar-nav {
   display: flex;
   align-items: center;
