nav effect & add fade-in animations

--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -32,7 +32,27 @@
   padding: 0.5em;
 }
 
-.navbar-nav a:hover {
-  text-decoration: underline;
+.navbar-nav .nav-link {
+  position: relative;
+}
+
+.navbar-nav .nav-link::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -3px;
+  width: 60%;
+  height: 1px;
+  opacity: 0;
+  background-color: var(--mainPink);
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.navbar-nav .nav-link:hover::after {
+  width: 100%;
+  opacity: 1;
 }
 /*# sourceMappingURL=navbar.css.map */
