--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -10,10 +10,6 @@ h1 {
   margin: 0;
 }
 
-.wrapper {
-  height: 90vh;
-}
-
 :root {
   --mainPink: #ffa69eff;
   --mainYellowish: #faf3ddff;
@@ -23,10 +19,6 @@ h1 {
   --mainWhite: #ffffffea;
   --mainOffWhite: #faf6d8;
   --mainDark: #161616;
-}
-
-.wrapper {
-  height: 90vh;
 }
 
 body {
@@ -56,7 +48,7 @@ body {
 }
 
 .btn-pink {
-  color: var(--mainPink);
+  color: var(--mainGrey);
   border-color: var(--mainPink);
 }
 
@@ -79,7 +71,7 @@ body {
 
 .btn-yellowish {
   border-color: var(--mainYellowish);
-  color: var(--mainWhite);
+  color: var(--mainGrey);
 }
 
 .btn-yellowish:hover {
@@ -93,9 +85,12 @@ body {
   color: var(--mainOffWhite);
 }
 
-.menu,
+.menu {
+  min-height: 80vh;
+}
+
 .contact {
-  background: var(--mainBlue);
+  min-height: 50vh;
 }
 
 /* Bootstrap Override*/
