--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -100,6 +100,12 @@ body {
   align-items: center;
 }
 
+.prd-item-shop {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
 /* Animations */
 
 .fade-in {
