--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -168,3 +168,9 @@ body {
     opacity: 1;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .single-prd {
+    width: 50% !important;
+  }
+}
