--- a/src/components/css/navbar.scss
+++ b/src/components/css/navbar.scss
@@ -33,7 +33,7 @@
     width: 60%;
     height: 1px;
     opacity: 0;
-    background-color: var(--mainPink);
+    background-color: var(--mainGrey);
     transform: translate(-50%, 0);
     transition: all 0.3s ease-in-out;
   }
