--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -1,5 +1,5 @@
 .logo {
-  width: 5em;
+  width: 20em;
   height: auto;
 }
 
@@ -30,6 +30,14 @@
 
 .navbar-nav .bag {
   padding: 0.5em;
+  background: var(--mainDark);
+  color: var(--mainGrey);
+}
+
+.navbar-nav .bag:hover {
+  color: var(--mainWhite) !important;
+  -webkit-transition: ease-in 0.5s;
+  transition: ease-in 0.5s;
 }
 
 .navbar-nav .nav-link {
@@ -54,5 +62,12 @@
 .navbar-nav .nav-link:hover::after {
   width: 100%;
   opacity: 1;
+}
+
+@media only screen and (max-width: 600px) {
+  .logo {
+    width: 10em;
+    height: auto;
+  }
 }
 /*# sourceMappingURL=navbar.css.map */
