--- a/src/components/css/navbar.scss
+++ b/src/components/css/navbar.scss
@@ -1,5 +1,5 @@
 .logo {
-  width: 5em;
+  width: 20em;
   height: auto;
 }
 
@@ -18,9 +18,19 @@
       border: none;
     }
   }
+
   .bag {
     padding: 0.5em;
+    background: var(--mainDark);
+    color: var(--mainGrey);
   }
+
+  .bag:hover {
+    // border: 1px var(--mainGrey) solid;
+    color: var(--mainWhite) !important;
+    transition: ease-in 0.5s;
+  }
+
   .nav-link {
     position: relative;
   }
@@ -41,5 +51,12 @@
   .nav-link:hover::after {
     width: 100%;
     opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .logo {
+    width: 10em;
+    height: auto;
   }
 }
