--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -87,6 +87,7 @@ section {
   display: flex;
   flex-direction: column;
   align-content: center;
+  width:280px;
 }
 
 /* Animations */
@@ -94,6 +95,23 @@ section {
 .fade-in {
   -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+/* Snipcart Overwites */
+
+.snip-layout {
+  .snip-footer__copyright {
+    font-size:0 !important;
+    height:20px;
+  }
+}
+
+.snip-btn--highlight {
+  color:#FFFFFF !important;
+  background:#000 !important;
+  &:hover {
+    color:#979797;
+  }
 }
 
 @-webkit-keyframes fade-in {
