--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -32,6 +32,7 @@
   padding: 0.5em;
   background: var(--mainDark);
   color: var(--mainGrey);
+  font-size: 1.8em;
 }
 
 .navbar-nav .bag:hover {
@@ -42,6 +43,9 @@
 
 .navbar-nav .nav-link {
   position: relative;
+  font-weight: 900;
+  font-size: 1.3em;
+  letter-spacing: 0.1em;
 }
 
 .navbar-nav .nav-link::after {
@@ -66,7 +70,7 @@
 
 @media only screen and (max-width: 600px) {
   .logo {
-    width: 10em;
+    width: 13em;
     height: auto;
   }
 }
