--- a/src/components/css/navbar.scss
+++ b/src/components/css/navbar.scss
@@ -23,6 +23,7 @@
     padding: 0.5em;
     background: var(--mainDark);
     color: var(--mainGrey);
+    font-size:1.8em;
   }
 
   .bag:hover {
@@ -33,6 +34,9 @@
 
   .nav-link {
     position: relative;
+    font-weight:900;
+    font-size: 1.3em;
+    letter-spacing: 0.1em;
   }
 
   .nav-link::after {
@@ -56,7 +60,7 @@
 
 @media only screen and (max-width: 600px) {
   .logo {
-    width: 10em;
+    width: 13em;
     height: auto;
   }
 }
