--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
 h1 {
   font-family: "Josefin Sans", sans-serif;
@@ -65,8 +66,13 @@ section {
 }
 
 .footer {
-  background: var(--mainGrey);
-  color: var(--mainOffWhite);
+  font-family: 'Questrial', sans-serif;
+  background: var(--mainBlack);
+  color: var(--mainGrey);
+  text-decoration: none;
+  a {
+    color: var(--mainGrey);
+  }
 }
 
 .menu {
@@ -103,6 +109,11 @@ section {
   justify-content: center !important;
   align-content: center !important;
   align-items: center !important;
+}
+
+.card {
+  background-color: var(--mainDarkerGrey);
+  border:solid #FFF 1px;
 }
 
 picture {
