--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
-h1 {
-  font-family: "Josefin Sans", sans-serif;
+h1, h4, li {
+  font-family: "Adam", sans-serif;
 }
 
 * {
