--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -18,15 +18,15 @@ h1, h4, li {
   --mainGreen: #b8f2e6ff;
   --mainBlue: #aed9e0ff;
   --mainDarkerGrey: #313131;
-  --mainWhite: #ffffffea;
+  --mainWhite: #ffffff;
   --mainOffWhite: #faf6d8;
   --mainDark: #010101;
   --mainGrey: #767676;
 }
 
 body {
-  background: var(--mainDark);
-  color: var(--mainWhite);
+  background: var(--mainWhite);
+  color: var(--mainDarkerGrey);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif !important;
 }
 
@@ -43,6 +43,10 @@ body {
           justify-content: center;
   background-position: center;
   background-size: cover;
+  -webkit-mask-image: -webkit-gradient(linear, left bottom, left top, color-stop(5%, transparent), to(#000));
+  -webkit-mask-image: linear-gradient(to top, transparent 5%, #000 100%);
+          mask-image: -webkit-gradient(linear, left bottom, left top, color-stop(5%, transparent), to(#000));
+          mask-image: linear-gradient(to top, transparent 5%, #000 100%);
 }
 
 .about-background {
@@ -159,7 +163,7 @@ picture img {
 
 .snip-btn--highlight {
   color: #FFFFFF !important;
-  background: var(--mainBlack) !important;
+  background: var(--mainDarkerGrey) !important;
 }
 
 .snip-btn--highlight:hover {
@@ -167,7 +171,7 @@ picture img {
 }
 
 .snipcart-checkout {
-  background: var(--mainBlack);
+  background: var(--mainWhite);
 }
 
 @-webkit-keyframes fade-in {
