--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -11,6 +11,17 @@
   width: 400px;
   z-index: 3;
   cursor: pointer;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: -webkit-transform 0.5s ease-out;
+  transition: -webkit-transform 0.5s ease-out;
+  transition: transform 0.5s ease-out;
+  transition: transform 0.5s ease-out, -webkit-transform 0.5s ease-out;
+}
+
+.side-drawer.open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .side-drawer a:hover {
@@ -39,5 +50,11 @@
 
 .side-drawer ul li {
   margin: 0 1.2em;
+}
+
+@media (min-width: 600px) {
+  .side-drawer {
+    display: none;
+  }
 }
 /*# sourceMappingURL=SideDrawer.css.map */
