update nav & sidedrawer & few styles

--- a/src/components/SideDrawer/SideDrawer.scss
+++ b/src/components/SideDrawer/SideDrawer.scss
@@ -1,13 +1,13 @@
 .side-drawer {
     height:100%;
-    background:var(--mainLight);
+    background:rgba(255,255,255,0.9);
     color:var(--mainDark);
     box-shadow: 2px 0 5px rgba(0,0,0,0.5);
     position: fixed;
     top:0;
     left:0;
     max-width:60%;
-    width: 400px;
+    width: 200px;
     z-index: 3;
     cursor:pointer;
     transform: translateX(-100%);
@@ -16,6 +16,7 @@
         transform: translateX(0);
     }
     a {
+        color:var(--lightGrey);
         &:hover {
             color:var(--lightGrey);
         }
@@ -29,10 +30,14 @@
         display:flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         font-size:1.4em;
         li {
-            margin:0 1.2em;
+            margin:0.2em 1.2em;
         }
+    }
+    button {
+        border:none;
     }
 }
 
