--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -1,6 +1,6 @@
 .side-drawer {
   height: 100%;
-  background: var(--mainLight);
+  background: rgba(255, 255, 255, 0.9);
   color: var(--mainDark);
   -webkit-box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
           box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
@@ -8,7 +8,7 @@
   top: 0;
   left: 0;
   max-width: 60%;
-  width: 400px;
+  width: 200px;
   z-index: 3;
   cursor: pointer;
   -webkit-transform: translateX(-100%);
@@ -22,6 +22,10 @@
 .side-drawer.open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
+}
+
+.side-drawer a {
+  color: var(--lightGrey);
 }
 
 .side-drawer a:hover {
@@ -45,11 +49,18 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 1.4em;
 }
 
 .side-drawer ul li {
-  margin: 0 1.2em;
+  margin: 0.2em 1.2em;
+}
+
+.side-drawer button {
+  border: none;
 }
 
 @media (min-width: 600px) {
