--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -48,6 +48,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0 !important;
 }
 
@@ -71,6 +74,11 @@
   color: var(--mainDarkerGrey);
   font-size: 2em;
   text-decoration: none;
+}
+
+.toolbar button {
+  font-size: 1.5em;
+  border: none;
 }
 
 .navbar-nav {
