--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,11 +9,14 @@ h5 {
   margin: 0;
 }
 
-* {
+*, *:before, *:after {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  -ms-box-sizing: border-box;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 :root {
