--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -11,11 +11,16 @@ h5 {
   
 }
 
-* {
-  box-sizing: border-box;
+* , *:before, *:after{ 
+  box-sizing:border-box; 
+  -moz-box-sizing:border-box; 
+  -webkit-box-sizing:border-box; 
+  -ms-box-sizing:border-box;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
+
 
 :root {
   --mainDark:#313131; 
